--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fruit Burst</title>
 
+    <link rel="shortcut icon" href="images/logo.png" type="image/x-icon">
+
 
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.4.0/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
@@ -73,7 +75,8 @@
             </div>
         </div>
         <div class="navbar-end hidden lg:flex">
-            <input type="text" placeholder="Search here" class="input input-bordered input-sm w-full max-w-xs rounded-full mr-3" />
+            <input type="text" placeholder="Search here " class="input input-bordered input-sm w-full max-w-xs rounded-full mr-3" />
+            <span class=""><i class="fa-solid fa-magnifying-glass"></i></span>
 
         </div>
       </div>
@@ -155,7 +158,7 @@
         </div>
       </div>
 </div>
-<div class="bg-white shadow-2xl flex justify-center gap-10 py-10 w-8/12 absolute bottom-52 left-52 rounded-xl hidden lg:flex">
+<div class="bg-white shadow-2xl flex justify-center gap-10 py-10 w-8/12 absolute bottom-12 left-52 rounded-xl hidden lg:flex">
   <img src="images/fruit1.png" alt="">
   <img src="images/fruit2.png" alt="">
   <img src="images/fruit3.png" alt="">
@@ -464,12 +467,12 @@
     </section>
     <!-- Meet the team section -->
    
-   <section>
+   <section class="">
      <div class="mt-20 ">
-      <div class="bg-opacity-95 rounded-md" style="background-image: url('./images/team.png'); background-size: cover; background-position: center;">
-        <div class="pt-12 ">
+      <div class=" rounded-md" style="background-image: url('./images/team.png'); background-size: cover; background-position: center;">
+        <div class="pt-12 mx-">
           <h1 class="mb-5 text-5xl font-bold text-white text-center">Meet the team section</h1>
-        <p class="mb-5 text-white text-center">All fruits and vegetables should be rinsed before eating. This recommendation also applies to produce with rinds or skins that are not eaten. It should be done just before preparing or eating to avoid premature spoilage.</p>
+        <p class="mb-5 text-white text-center">All fruits should be rinsed before eating. This recommendation also applies to produce with rinds or skins that are not eaten. <br> It should be done just before preparing or eating to avoid premature spoilage.</p>
         
       <!-- team card -->
         <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 mt-12">
@@ -642,7 +645,7 @@
         <h3 class="text-3xl font-bold text-white">Fruit Burst</h3>
     </div>
     <div>
-      <ul class="grid grid-cols-3 lg:grid-cols-6 gap-10 justify-center text-white mx-10">
+      <ul class="grid grid-cols-3 lg:grid-cols-6 gap-10 justify-center text-white mx-10 md:mx-20 lg:mx-32">
         <li>Home</li>
         <li>About Us</li>
         <li>Shop</li>
@@ -663,8 +666,5 @@
     </div>
     </div>
   </footer>
-
-  <div>
-    
 </body>
 </html>
