--- a/index.html
+++ b/index.html
@@ -423,7 +423,7 @@
               <!--  -->
               <div class="card-actions mt-7">
                 <!-- Open the modal using ID.showModal() method -->
-   <button class="text-color-pry" onclick="my_modal_.showModal()">details</button>
+   <button class="text-color-pry" onclick="my_modal_4.showModal()">details</button>
    <dialog id="my_modal_4" class="modal modal-bottom sm:modal-middle">
      <form method="dialog" class="modal-box">
       <!-- secend time -->
