--- a/index.html
+++ b/index.html
@@ -592,11 +592,11 @@
           </div>
         </div>
         <!-- 2 -->
-        <div class="flex-1">
+        <div class="flex-1 my-8">
           <img src="images/whychoose1.png" alt="">
         </div>
         <!-- 3 -->
-        <div class="flex-1 space-y-12">
+        <div class="flex-1 space-y-8">
           <div class=" flex gap-3 text-right">
             <div>
                <h3 class="text-xl font-bold border-b border-gray-500 pb-2 text-right">
