--- a/index.html
+++ b/index.html
@@ -471,10 +471,10 @@
     <!-- Meet the team section -->
    
    <section class="mx-5 lg:mx-0">
-     <div class="mt-20 bg-gray-400">
-      <div class=" rounded-md" style="background-image: url('./images/team.png'); background-size: cover; background-position: center;">
+     <div class="mt-20 ">
+      <div class="rounded-md" style="background-image: url('./images/team.png'); background-size: cover; background-position: center;">
       
-        <div class="pt-12 mx-">
+        <div class="pt-12 ">
           <h1 class="mb-5 text-5xl font-bold text-white text-center">Meet the team section</h1>
         <p class="mb-5 text-white text-center flex justify-center">All fruits should be rinsed before eating. This recommendation also applies to produce with rinds or skins that are not eaten. <br> It should be done just before preparing or eating to avoid premature spoilage.</p>
         
@@ -592,11 +592,11 @@
           </div>
         </div>
         <!-- 2 -->
-        <div class="flex-1 my-8">
+        <div class="flex-1 my-8 md:my-0 lg:my-0 order-first md:order-none lg:order-none">
           <img src="images/whychoose1.png" alt="">
         </div>
         <!-- 3 -->
-        <div class="flex-1 space-y-8">
+        <div class="flex-1 space-y-8 ml-14 grid justify-center lg:justify-normal">
           <div class=" flex gap-3 text-right">
             <div>
                <h3 class="text-xl font-bold border-b border-gray-500 pb-2 text-right">
@@ -643,6 +643,7 @@
   </main>
   <!-- footer -->
   <footer class="bg-black">
+
     <div class="space-y-10 py-20 container mx-auto">
       <div class="flex gap-3 items-center justify-center">
         <img src="images/logo.png" alt="">
