--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
    <div class="modal-action flex justify-around">
     <!-- if there is a button in form, it will close the modal -->
     <button class="btn text-color-pry border-color-pry bg-white">Close</button>
-    <button class="bg-color-pry text-white py-3 px-5 text-base rounded-lg font-semibold">Shop All</button>
+    <button class="bg-color-pry text-white py-3 px-5 text-base rounded-lg font-semibold">Buy Now</button>
 
   </div>
   </form>
@@ -327,7 +327,7 @@
       <div class="modal-action flex justify-around">
        <!-- if there is a button in form, it will close the modal -->
        <button class="btn text-color-pry border-color-pry bg-white">Close</button>
-       <button class="bg-color-pry text-white py-3 px-5 text-base rounded-lg font-semibold">Shop All</button>
+       <button class="bg-color-pry text-white py-3 px-5 text-base rounded-lg font-semibold">Buy Now</button>
    
      </div>
      </form>
@@ -390,7 +390,7 @@
       <div class="modal-action flex justify-around">
        <!-- if there is a button in form, it will close the modal -->
        <button class="btn text-color-pry border-color-pry bg-white">Close</button>
-       <button class="bg-color-pry text-white py-3 px-5 text-base rounded-lg font-semibold">Shop All</button>
+       <button class="bg-color-pry text-white py-3 px-5 text-base rounded-lg font-semibold">Buy Now</button>
    
      </div>
      </form>
@@ -454,7 +454,7 @@
       <div class="modal-action flex justify-around">
        <!-- if there is a button in form, it will close the modal -->
        <button class="btn text-color-pry border-color-pry bg-white">Close</button>
-       <button class="bg-color-pry text-white py-3 px-5 text-base rounded-lg font-semibold">Shop All</button>
+       <button class="bg-color-pry text-white py-3 px-5 text-base rounded-lg font-semibold">Buy Now</button>
    
      </div>
      </form>
