--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
   <style>
     .font-lato{
         font-family: 'Lato', sans-serif;
+        /*  */
+        
     }
   </style>
   <!-- End -->
@@ -488,7 +490,6 @@
    <section class="mx-5 lg:mx-0">
      <div class="mt-20 ">
       <div class="rounded-md" style="background-image: url('./images/team.png'); background-size: cover; background-position: center;">
-      
         <div class="pt-12 ">
           <h1 class="mb-5 text-5xl font-bold text-white text-center">Meet the team section</h1>
         <p class="mb-5 text-white text-center flex justify-center">All fruits should be rinsed before eating. This recommendation also applies to produce with rinds or skins that are not eaten. <br> It should be done just before preparing or eating to avoid premature spoilage.</p>
@@ -559,7 +560,7 @@
      </div> 
    </section>
    <!-- Why Choose Us -->
-   <section class="my-20 mx-4 lg:mx-0">
+   <section class="my-20 mx-5 lg:mx-0">
     <h1 class="text-5xl font-bold text-center mb-4">Why Choose Us</h1>
     <p class="text-sm font-medium text-gray-500 text-center">We always deliver on time: We genuinely understand the value of time in business <br>and hence adhere to time and deliver all projects on time to our customers.
     </p>
@@ -568,7 +569,7 @@
         <div class="flex-1 space-y-12">
           <div class=" flex gap-3">
             <div>
-              <i class="fa-solid fa-people-group text-2xl"></i>
+              <i class="fa-solid fa-people-group text-2xl  bg-slate-200 px-2 py-1 rounded-full"></i>
             </div>
             <div>
               <h3 class="text-xl font-bold border-b border-gray-500 pb-2">
@@ -581,7 +582,7 @@
           </div>
           <div class=" flex gap-3">
             <div>
-              <i class="fa-solid fa-heart-circle-check text-2xl"></i>
+              <i class="fa-solid fa-heart-circle-check text-2xl  bg-slate-200 px-2 py-1 rounded-full"></i>
             </div>
             <div>
               <h3 class="text-xl font-bold border-b border-gray-500 pb-2">
@@ -594,7 +595,7 @@
           </div>
           <div class=" flex gap-3">
             <div>
-              <i class="fa-solid fa-gifts text-2xl"></i>
+              <i class="fa-solid fa-gifts text-2xl  bg-slate-200 px-2 py-1 rounded-full"></i>
             </div>
             <div>
               <h3 class="text-xl font-bold border-b border-gray-500 pb-2">
@@ -614,7 +615,7 @@
         <div class="flex-1 space-y-8 lg:mt-5 lg:text-right grid justify-center lg:justify-normal">
           <div class=" flex gap-3 lg:flex-row-reverse">
             <div>
-              <i class="fa-solid fa-plate-wheat text-2xl"></i>
+              <i class="fa-solid fa-plate-wheat text-2xl bg-slate-200 px-2 py-1 rounded-full"></i>
              </div>
             <div>
                <h3 class="text-xl font-bold border-b border-gray-500 pb-2 ">
@@ -628,9 +629,9 @@
            </div>
            <div class=" flex gap-3 lg:flex-row-reverse">
             <div>
-              <div>
-                <i class="fa-solid fa-ice-cream text-2xl"></i>
-               </div>
+              <i class="fa-solid fa-ice-cream text-2xl  bg-slate-200 px-2 py-1 rounded-full"></i>
+             </div>
+            <div>
                <h3 class="text-xl font-bold border-b border-gray-500 pb-2 ">
                 Sustainable Practice
                </h3>
@@ -642,7 +643,7 @@
            </div>
            <div class=" flex gap-3 lg:flex-row-reverse">
             <div>
-              <i class="fa-regular fa-thumbs-up text-2xl"></i>
+              <i class="fa-regular fa-thumbs-up text-2xl  bg-slate-200 px-2 py-1 rounded-full"></i>
              </div>
             <div>
                <h3 class="text-xl font-bold border-b border-gray-500 pb-2 ">
