--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <label tabindex="0" class="btn btn btn-ghost lg:hidden ">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 " fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h7" /></svg>
           </label>
-          <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52 text-white ">
+          <ul tabindex="0" class="menu menu-sm dropdown-content mt-3 z-[1] p-2 shadow bg-base-100 rounded-box w-52  ">
               <li><a>Home</a></li>
               <li><a>About Us</a></li>
               <li><a>Shop</a></li>
@@ -58,7 +58,7 @@
           </ul>
         </div>
         <div class="navbar-center hidden lg:flex order-last lg:order-none">
-          <ul class="menu menu-horizontal px-1 text-white">
+          <ul class="menu menu-horizontal px-1 ">
             <li><a>Home</a></li>
             <li><a>About Us</a></li>
             <li><a>Shop</a></li>
@@ -569,7 +569,7 @@
         <div class="flex-1 space-y-12">
           <div class=" flex gap-3">
             <div>
-              <i class="fa-solid fa-people-group text-2xl  bg-slate-200 px-2 py-1 rounded-full"></i>
+              <i class="fa-solid fa-people-group text-2xl bg-slate-200 px-2 py-1 rounded-full"></i>
             </div>
             <div>
               <h3 class="text-xl font-bold border-b border-gray-500 pb-2">
