added text color

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
           </ul>
         </div>
         <div class="navbar-center hidden lg:flex order-last lg:order-none">
-          <ul class="menu menu-horizontal px-1 ">
+          <ul class="menu menu-horizontal px-1 text-white">
             <li><a>Home</a></li>
             <li><a>About Us</a></li>
             <li><a>Shop</a></li>
